--- a/glue/viewers/scatter/qt/options_widget.ui
+++ b/glue/viewers/scatter/qt/options_widget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>255</width>
-    <height>180</height>
+    <height>185</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,13 +20,45 @@
    <property name="margin">
     <number>5</number>
    </property>
+   <item row="5" column="0" colspan="4">
+    <widget class="Line" name="line">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QToolButton" name="button_flip_y">
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">padding: 0px</string>
+     </property>
+     <property name="text">
+      <string>⇄</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label">
+     <property name="text">
+      <string>min/max:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="value_x_min"/>
+   </item>
+   <item row="1" column="3">
+    <widget class="QLineEdit" name="value_x_max"/>
+   </item>
    <item row="3" column="1" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <property name="spacing">
       <number>5</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
      </property>
      <item>
       <widget class="QComboBox" name="combo_y_attribute"/>
@@ -42,22 +74,6 @@
       </widget>
      </item>
     </layout>
-   </item>
-   <item row="0" column="0">
-    <widget class="QLabel" name="x_lab">
-     <property name="font">
-      <font>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>x axis</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="3">
-    <widget class="QLineEdit" name="value_x_max"/>
    </item>
    <item row="1" column="2">
     <widget class="QToolButton" name="button_flip_x">
@@ -77,24 +93,16 @@
    <item row="4" column="1">
     <widget class="QLineEdit" name="value_y_min"/>
    </item>
-   <item row="5" column="0" colspan="4">
-    <widget class="Line" name="line">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="0" column="0">
+    <widget class="QLabel" name="x_lab">
+     <property name="font">
+      <font>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
      </property>
-    </widget>
-   </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_2">
      <property name="text">
-      <string>min/max:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="1" colspan="3">
-    <widget class="QCheckBox" name="checkbox_hidden">
-     <property name="text">
-      <string>Show hidden attributes</string>
+      <string>x axis</string>
      </property>
     </widget>
    </item>
@@ -102,9 +110,6 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="spacing">
       <number>5</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
      </property>
      <item>
       <widget class="Line" name="line_3">
@@ -137,26 +142,12 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="value_x_min"/>
-   </item>
-   <item row="4" column="2">
-    <widget class="QToolButton" name="button_flip_y">
-     <property name="font">
-      <font>
-       <pointsize>14</pointsize>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">padding: 0px</string>
-     </property>
+   <item row="6" column="1" colspan="3">
+    <widget class="QCheckBox" name="checkbox_hidden">
      <property name="text">
-      <string>⇄</string>
+      <string>Show hidden attributes</string>
      </property>
     </widget>
-   </item>
-   <item row="4" column="3">
-    <widget class="QLineEdit" name="value_y_max"/>
    </item>
    <item row="3" column="0">
     <widget class="QLabel" name="x_lab">
@@ -171,13 +162,13 @@
      </property>
     </widget>
    </item>
+   <item row="4" column="3">
+    <widget class="QLineEdit" name="value_y_max"/>
+   </item>
    <item row="0" column="1" colspan="3">
     <layout class="QHBoxLayout" name="horizontalLayout_2">
      <property name="spacing">
       <number>5</number>
-     </property>
-     <property name="margin">
-      <number>0</number>
      </property>
      <item>
       <widget class="QComboBox" name="combo_x_attribute"/>
@@ -206,12 +197,25 @@
      </item>
     </layout>
    </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="label">
+   <item row="1" column="0">
+    <widget class="QLabel" name="label_2">
      <property name="text">
       <string>min/max:</string>
      </property>
     </widget>
+   </item>
+   <item row="7" column="0" colspan="4">
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
